ims-react/src/assets/stylesheets/base.scss
html, body, #root, .App {
  height: 100%
}

.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

.text-align-left {
  text-align: left
}

.margin-right-5 {
  margin-right: 5px;
}

.margin-right-15 {
  margin-right:15px;
}

.margin-right-60 {
  margin-right: 90px;
}

.margin-30 {
  margin: 15px;
}

.radio-button-set{
  float:left;
  display: block;
}

